smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/version-too-many-segments.smithy
// Smithy version number should have 2 or 3 parts: 0.1.0.0
$version: "0.1.0.0"
